--- a/ansible/plays/templates/nginx.conf.j2
+++ b/ansible/plays/templates/nginx.conf.j2
@@ -1,5 +1,5 @@
 upstream demo {
-    {% for server in groups.webserver %}
+    {% for server in groups.tag_Name_loadbalancer_database %}
         server {{ server }}
     {% endfor %}
 }
